--- a/package.json
+++ b/package.json
@@ -35,19 +35,21 @@
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.5.0",
     "eth-create2-calculator": "^1.1.5",
-    "ethers": "^5.7.2",
+    "ethers": "^6.8.0",
     "got": "11.8.3",
     "hardhat": "^2.22.3",
     "hardhat-deploy": "^0.11.25",
     "hardhat-gas-reporter": "^1.0.9",
     "husky": "^8.0.0",
     "prettier": "2.7.1",
-    "ts-node": "^10.9.1",
+    "ts-node": "^10.9.2",
     "typechain": "^8.1.1",
-    "typescript": "^5.0.4",
+    "typescript": "^5.8.3",
     "zksync-ethers": "^5.1.0"
   },
   "dependencies": {
+    "@flashbots/ethers-provider-bundle": "^1.0.0",
+    "@flashbots/mev-share-client": "^0.7.13",
     "@nomicfoundation/hardhat-foundry": "^1.1.1",
     "@openzeppelin/contracts": "5.3.0",
     "@pythnetwork/price-service-client": "^1.9.0",
